--- a/devbm7_tp02_echo.ioc
+++ b/devbm7_tp02_echo.ioc
@@ -6,7 +6,8 @@ Mcu.IP0=CORTEX_M7
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F756VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14/OSC32_IN
@@ -14,11 +15,12 @@ Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PC0
-Mcu.Pin5=PC1
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PB6
+Mcu.Pin8=PB7
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.UserConstants=
 Mcu.UserName=STM32F756VGTx
 MxCube.Version=4.13.0
@@ -29,10 +31,18 @@ PA13.Mode=Serial-Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial-Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=USB_SERIE_USART1_TX
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=USB_SERIE_USART1_RX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC0.Locked=true
 PC0.Signal=GPIO_Output
-PC1.Locked=true
-PC1.Signal=GPIO_Input
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
